solving display issue on mobile device

--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -23,7 +23,7 @@ h6 {
 }
 
 .bloglist {
-	padding: 0 30%;
+	padding: 0 10%;
     text-align: center;
     font-size: 15px;
     font-weight: 300;
@@ -39,7 +39,7 @@ h6 {
     font-size: 15px;
     font-weight: 300;
     line-height: 25px;
-    padding: 0 30%;
+    padding: 0 10%;
     text-align: left;
 }
 
@@ -117,7 +117,7 @@ h6 {
 }
 
 .post {
-    padding: 0 20%; 
+    padding: 0 10%; 
     text-align: left;
     font-size: 15px;
     font-weight: 300;
